Error Mitigation/MagiCoder/Data/javax_naming/javax_namingOutputResult.txt
Sample: BinaryRefAddr_4
----------------------------------------------------------------
stdout:
true
false

================================================================

Sample: BinaryRefAddr_5
----------------------------------------------------------------
stdout:
Hash code: 3576488

================================================================

Sample: CompositeName_2
----------------------------------------------------------------
output:
./Data/javax_naming/javaFiles/CompositeName_2.java:6: error: no suitable constructor found for CompositeName(String[])
        CompositeName compositeName = new CompositeName(new String[]{"com", "example", "test"});
                                      ^
    constructor CompositeName.CompositeName(Enumeration<String>) is not applicable
      (argument mismatch; String[] cannot be converted to Enumeration<String>)
    constructor CompositeName.CompositeName(String) is not applicable
      (argument mismatch; String[] cannot be converted to String)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

Sample: CompositeName_3
----------------------------------------------------------------
output:
./Data/javax_naming/javaFiles/CompositeName_3.java:7: error: no suitable constructor found for CompositeName(String,String,String)
            CompositeName compositeName = new CompositeName("com", "example", "sub");
                                          ^
    constructor CompositeName.CompositeName(Enumeration<String>) is not applicable
      (actual and formal argument lists differ in length)
    constructor CompositeName.CompositeName(String) is not applicable
      (actual and formal argument lists differ in length)
    constructor CompositeName.CompositeName() is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: CompositeName_4
----------------------------------------------------------------
output:
./Data/javax_naming/javaFiles/CompositeName_4.java:5: error: no suitable constructor found for CompositeName(String,String,String)
        CompositeName compositeName = new CompositeName("com", "example", "test");
                                      ^
    constructor CompositeName.CompositeName(Enumeration<String>) is not applicable
      (actual and formal argument lists differ in length)
    constructor CompositeName.CompositeName(String) is not applicable
      (actual and formal argument lists differ in length)
    constructor CompositeName.CompositeName() is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: InitialContext_2
----------------------------------------------------------------
stderr:
javax.naming.NoInitialContextException: Need to specify class name in environment or system property, or in an application resource file: java.naming.factory.initial
	at java.naming/javax.naming.spi.NamingManager.getInitialContext(NamingManager.java:704)
	at java.naming/javax.naming.InitialContext.getDefaultInitCtx(InitialContext.java:305)
	at java.naming/javax.naming.InitialContext.getURLOrDefaultInitCtx(InitialContext.java:402)
	at java.naming/javax.naming.InitialContext.rebind(InitialContext.java:429)
	at InitialContext_2.main(InitialContext_2.java:16)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: InitialContext_3
----------------------------------------------------------------
stderr:
javax.naming.NoInitialContextException: Need to specify class name in environment or system property, or in an application resource file: java.naming.factory.initial
	at java.naming/javax.naming.spi.NamingManager.getInitialContext(NamingManager.java:704)
	at java.naming/javax.naming.InitialContext.getDefaultInitCtx(InitialContext.java:305)
	at java.naming/javax.naming.InitialContext.getURLOrDefaultInitCtx(InitialContext.java:402)
	at java.naming/javax.naming.InitialContext.unbind(InitialContext.java:437)
	at InitialContext_3.main(InitialContext_3.java:15)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: InitialContext_4
----------------------------------------------------------------
output:
./Data/javax_naming/javaFiles/InitialContext_4.java:7: error: cannot find symbol
            Context ctx = new InitialContext();
                              ^
  symbol:   class InitialContext
  location: class InitialContext_4
1 error


================================================================

Sample: InitialContext_5
----------------------------------------------------------------
stderr:
javax.naming.NoInitialContextException: Need to specify class name in environment or system property, or in an application resource file: java.naming.factory.initial
	at java.naming/javax.naming.spi.NamingManager.getInitialContext(NamingManager.java:704)
	at java.naming/javax.naming.InitialContext.getDefaultInitCtx(InitialContext.java:305)
	at java.naming/javax.naming.InitialContext.getURLOrDefaultInitCtx(InitialContext.java:342)
	at java.naming/javax.naming.InitialContext.createSubcontext(InitialContext.java:481)
	at InitialContext_5.main(InitialContext_5.java:10)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: LinkRef_2
----------------------------------------------------------------
output:
./Data/javax_naming/javaFiles/LinkRef_2.java:10: error: no suitable constructor found for LinkRef(String,String)
            LinkRef linkRef = new LinkRef("linkName", "atomicName");
                              ^
    constructor LinkRef.LinkRef(Name) is not applicable
      (actual and formal argument lists differ in length)
    constructor LinkRef.LinkRef(String) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: NameClassPair_2
----------------------------------------------------------------
stderr:
javax.naming.NoInitialContextException: Need to specify class name in environment or system property, or in an application resource file: java.naming.factory.initial
	at java.naming/javax.naming.spi.NamingManager.getInitialContext(NamingManager.java:704)
	at java.naming/javax.naming.InitialContext.getDefaultInitCtx(InitialContext.java:305)
	at java.naming/javax.naming.InitialContext.getURLOrDefaultInitCtx(InitialContext.java:342)
	at java.naming/javax.naming.InitialContext.lookup(InitialContext.java:409)
	at NameClassPair_2.main(NameClassPair_2.java:10)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: NameClassPair_3
----------------------------------------------------------------
output:
./Data/javax_naming/javaFiles/NameClassPair_3.java:7: error: cannot find symbol
            Context ctx = new InitialDirContext();
                              ^
  symbol:   class InitialDirContext
  location: class NameClassPair_3
1 error


================================================================

Sample: RefAddr_3
----------------------------------------------------------------
output:
./Data/javax_naming/javaFiles/RefAddr_3.java:6: error: RefAddr is abstract; cannot be instantiated
        RefAddr refAddr = new RefAddr("type", "address");
                          ^
1 error


================================================================

